# oelint-adv

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  MANIFEST.in  README.md  build.sh  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  ruleset-recommend.json  setup.cfg  setup.py  test.sh  wiki-creator.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: .oelint.cfg.custom-layer  .oelint.cfg.example  constants.md  rule_example.py  template.md
oelint_adv/: __init__.py  __main__.py  caches.py  cls_item.py  cls_rule.py  cls_stash.py  color.py  const_func.py  const_vars.py  core.py  helper_files.py  inlinerep.py  main.py  outputformat.py  parser.py  rule.py  rule_comment_notraling.py  rule_file.py  rule_file_patch_signedoff.py  rule_file_patch_upstreamstatus.py  rule_nospace_line_begin.py  rule_nospace_line_cont.py  rule_nospace_line_empty.py  rule_nospace_line_end.py  rule_notabs.py  rule_tasks_addnotaskbody.py  rule_tasks_customorder.py  rule_tasks_doc_strings.py  rule_tasks_multiappends.py  rule_tasks_no_cp.py  rule_tasks_no_mkdir.py  rule_tasks_nopython_prefix.py  rule_tasks_order.py  rule_tasks_python_prefix.py  rule_var_autorev.py  rule_var_bugtracker_url.py  rule_var_depends_append.py  rule_var_depends_ordered.py  rule_var_duplicates.py  rule_var_homepage.py  (+23 more)
scripts/: bitbake-listflags  bitbake-listvars  bump-vars  bump-vars.config.json  generate-knownvars  generate-layer-variables  generate-variables  oelint-bitbake-get-configs
testruleset/: rule_additonal.py
tests/: README.md  base.py  jetm.rule_var_depends_singleline_bad  jetm.rule_var_depends_singleline_good  rule_append_protvars_bad  rule_append_protvars_good  rule_append_protvars_good2  rule_comment_notraling_bad  rule_comment_notraling_good  rule_file_include_bad  rule_file_include_good  rule_file_patch_signedoff_bad  rule_file_patch_signedoff_good  rule_file_patch_upstreamstatus_bad  rule_file_patch_upstreamstatus_bad2  rule_file_patch_upstreamstatus_bad3  rule_file_patch_upstreamstatus_bad4  rule_file_patch_upstreamstatus_bad5  rule_file_patch_upstreamstatus_good  rule_file_require_bad  rule_file_require_good  rule_file_requireinclude_bad  rule_file_requireinclude_good  rule_file_underscores_bad  rule_file_underscores_bad2  rule_file_underscores_bad3  rule_file_underscores_good1  rule_file_underscores_good2  rule_file_underscores_good3  rule_func_machinespec_bad  rule_func_machinespec_bad2  rule_func_machinespec_good  rule_func_spec_bad  (+302 more)
(+487 files in other folders)
